# FastCampus_mcp_a2a_workflow_project

./: .env.example  .gitignore  .ruff.toml  1-run-docker.sh  AGENT.md  AGENTS.md  Dockerfile  LICENSE  README.md  docker-compose-full.yml  pyproject.toml  run-docker.ps1  run-langchain-sandbox-mcp.sh  run-playwright-mcp.sh  setup.sh
a2a-inspector/: AGENT.md  Dockerfile
docker/: AGENT.md  mcp-notion.md  mcp-playwright.md
docker/langchain-sandbox-mcp/: Dockerfile
docs/: AGENT.md  langgraph-llms-full_0.6.2.txt
docs/a2a_spec/: a2a-protocol-api.md  a2a-protocol-python-tutorials.md  a2a-protocol-specification.md  a2a-protocol-topics.md
docs/plans/: 2025-12-24-dependency-update-plan.md
examples/browser/: a2a_example.py  langgraph_example.py
examples/common/: logging.py  result_parsers.py  server_checks.py
examples/executor/: a2a_example.py  langgraph_example.py
examples/knowledge/: a2a_example.py  langgraph_example.py
examples/planner/: a2a_example.py  langgraph_example.py
examples/supervisor/: a2a_example.py  langgraph_example.py
mem0/openmemory/api/: Dockerfile  run_mcp.py
src/: AGENT.md  __init__.py
src/a2a_integration/: AGENT.md  __init__.py  a2a_lg_client_utils.py  a2a_lg_server_utils.py  cors_utils.py  executor.py  models.py
src/a2a_integration/auth/: AGENT.md  __init__.py  credentials.py
src/agents/: AGENT.md  model.py  prompts.py  sample.py
src/agents/browser/: AGENT.md  __main__.py  browser_use_agent_a2a.py  browser_use_agent_lg.py
src/agents/executor/: AGENT.md  __main__.py  task_executor_agent_a2a.py  task_executor_agent_lg.py
src/agents/knowledge/: AGENT.md  __init__.py  __main__.py  knowledge_agent_a2a.py  knowledge_agent_lg.py
src/agents/planner/: AGENT.md  (+4 more)
src/base/: AGENT.md  __init__.py  a2a_interface.py  base_graph_agent.py  base_graph_state.py  configuration.py  error_handling.py  util.py
src/mcp_config_module/: AGENT.md  __init__.py  base_mcp_server.py  health_checker.py  mcp_config.py
src/sandbox/: __init__.py  pyodide_sandbox.py
(+12 files in other folders)
